--- a/Rapport/litteraturliste.bib
+++ b/Rapport/litteraturliste.bib
@@ -99,13 +99,16 @@ url = {http://www.robot-electronics.co.uk/htm/emg30.htm}
 
 
 
+@ONLINE{DCmotormodel,
+author = {J. Borenstein, and H. R. Everett, and L. Feng},
+title = {Where am I? Sensors and Methods for Mobile Robot Positioning},
+year = {1996},
+url = {http://www-personal.umich.edu/~johannb/Papers/pos96rep.pdf}
+}
 
-
-
-
-
-
-
-
-
-
+@ONLINE{matlabdcmodel,
+author = {MATLAB\textregistered},
+title = {DC Motor Position: System Modeling},
+year = {2012},
+url = {http://ctms.engin.umich.edu/CTMS/index.php?example=MotorPosition&section=SystemModeling}
+}
