Læst noget af rapporten igennem og rettet en lille smule

--- a/Rapport/content/forkortelser.tex
+++ b/Rapport/content/forkortelser.tex
@@ -18,7 +18,7 @@ PTS = Pan and Tilt System
 \item Indledning
 \item Pan \& Tilt-rammernes inertimoment
 \item Reguleringsdesign
-\item FPGA
+\item FPGA (Første udkast er lavet)
 \item Mikrokontroller
 \item Kommunikation mellem FPGA og Mikrokontroller
 \item 
