--- a/Rapport/content/problemformulering.tex
+++ b/Rapport/content/problemformulering.tex
@@ -27,3 +27,4 @@ vil med en frekvens på 60 [Hz] blive givet som input til systemet.
 
 Som angivet i projektoplægget skal reguleringen foregå på en microcontroller,
 mens positionsbestemmelsen skal foregå på en FPGA.
+\todo[inline,color= pink]{Mikkel: Skal der ikke stå motorpositionsbestemmelse?}
