--- a/Rapport/content/kravspecifikation.tex
+++ b/Rapport/content/kravspecifikation.tex
@@ -28,6 +28,7 @@ Lerduen bliver affyret med en hastighed på 34,589 \([\frac{m}{s}]\) i en vinkel
 Set ovenfra bevæger målet sig som illustreret på figur \ref{fig:para_in_xy_plane}. 
 På figur \ref{fig:HH2D_para} ses nedslagspunktet, G, fra High-House 52 [m] efter startpositionen, D, samt  
 PTS' placering (i punktet B).\\
+\todo[inline, color = pink]{Mikkel: Der refereres til G og D på figur 2.1a, men det vises på figur 2.1b?}
 \begin{figure}[h!]
 \centering
 \subfloat[Lerduens højde som funktion af afstanden til D.\label{fig:HH2D_para}]{%
@@ -44,10 +45,10 @@ PTS' placering (i punktet B).\\
 \end{figure}
 
 Det anslås, at man kan nå at affyre de to skud mellem tidspunktet,
-hvor lerduen når toppunktet og nedslagstidspunktet (når lerduen når low house), se ligning \ref{eq:ks:nedslagstid}.
+hvor lerduen når toppunktet og nedslagstidspunktet (punkt G), se \ref{eq:ks:nedslagstid}.
 I dette tidsrum skal Pan \& Tilt-systemet sigte på lerduen så geværet kan ramme.
 Der er altså et tidsmæssigt krav til reguleringen om en Settling Time for systemet,
-der er lavere end tiden \(t_{s}\) angivet i ligning \ref{eq:ks:settlingtime}.
+der er lavere end tiden \(t_{s}\) angivet i \ref{eq:ks:settlingtime}.
 \begin{align}
   t_{s} &= 0,557 [s] &\text{(Settling Time)}
   \label{eq:ks:settlingtime}
