first controller diagram.

--- a/Rapport/content/kontrollerdesign.tex
+++ b/Rapport/content/kontrollerdesign.tex
@@ -67,7 +67,12 @@ Generelt krav
 \end{itemize}
 
 
-\subsection{PI, PD eller PID}
-analyse af rlocus()\\
-eventuel lille diskussion, hvorfor vi vælger den kontroller som vi gør. 
-???
+\subsection{Design af PI, PD eller PID}
+\begin{figure}[!th]
+\centering
+\begin{tikzpicture}[auto, node distance=2.6cm,>=latex']
+\include*{./graphics/digitalkontroller1}
+\end{tikzpicture}
+\caption[tekst i indholdsfortegnelsen]{figurtekst}
+\label{fig:}
+\end{figure}
