--- a/Rapport/master_doc.tex
+++ b/Rapport/master_doc.tex
@@ -1,5 +1,6 @@
 \input{./content/preamble}
 \input{./content/task_diagram_styles_v2}
+\input{./content/controller_diagram_styles_v1}
 \begin{document}
 \pagenumbering{Roman}
 \include{./content/forside}
